# trustmebro-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dockercompose.yaml  main.py  pyproject.toml
.github/workflows/: backend-cicd.yaml
api/: cert_generator.py
core/: __init__.py  cert_generator.py  cert_validator.py
k8s/: QUICK_REFERENCE.md  README.md  backend-deployment.yaml  deploy.sh  ingress.yaml  namespace.yaml  redis-deployment.yaml
tests/: test_cert_generator.py  test_cert_validator.py  test_main.py
