[project]
name = "trustmebro-backend"
version = "0.1.0"
description = "Generate a PDF certificate to prove anything with a QR code validation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "qrcode>=8.2",
    "redis>=6.2.0",
    "reportlab>=4.4.1",
    "uvicorn>=0.34.3",
]
